--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,13 @@ $dark-gray: #222;
 $dark-red: #802e2e;
 $blue: #1e90ff;
 
+// Semantic color variables
+$color-background: $white;
+$color-text-primary: $black;
+$color-text-secondary: $dark-gray;
+$color-text-tertiary: $medium-gray;
+$color-primary: $dark-red;
+
 // Typography
 $font-headline: var(--font-poppins), sans-serif;
 $font-heading: var(--font-poppins), sans-serif;
